[gd_scene load_steps=14 format=3 uid="uid://dgi6lhg1nsu0v"]

[ext_resource type="Script" uid="uid://mq8y4wnshfnk" path="res://scripts/turtle.gd" id="1_1l2iw"]
[ext_resource type="Texture2D" uid="uid://cr2gnieb7r73i" path="res://assets/imagesgood/lvl2assets/turtle new walk.png" id="2_1l2iw"]
[ext_resource type="FontFile" uid="uid://b5wm5dwar7jr0" path="res://assets/imagesgood/generalassets/HomeVideo-BLG6G.ttf" id="3_0jfbd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hbk6c"]
atlas = ExtResource("2_1l2iw")
region = Rect2(0, 0, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kcg0"]
atlas = ExtResource("2_1l2iw")
region = Rect2(288, 0, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrtyu"]
atlas = ExtResource("2_1l2iw")
region = Rect2(576, 0, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2r5w"]
atlas = ExtResource("2_1l2iw")
region = Rect2(864, 0, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lu78"]
atlas = ExtResource("2_1l2iw")
region = Rect2(1152, 0, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc3fs"]
atlas = ExtResource("2_1l2iw")
region = Rect2(1440, 0, 288, 288)

[sub_resource type="SpriteFrames" id="SpriteFrames_86a57"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbk6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kcg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrtyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2r5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lu78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc3fs")
}],
"loop": true,
"name": &"running",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1l2iw"]
radius = 31.016125

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hbk6c"]
size = Vector2(44.990486, 125.97467)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7kcg0"]
radius = 33.002937
height = 96.00576

[node name="Turtle" type="Area2D"]
collision_layer = 5
script = ExtResource("1_1l2iw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(19.999996, -19.999996)
scale = Vector2(0.61111104, 0.61111104)
sprite_frames = SubResource("SpriteFrames_86a57")
animation = &"running"
autoplay = "running"
frame_progress = 0.25642446

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(61, -3)
shape = SubResource("CircleShape2D_1l2iw")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(19.979866, 44.501614)
rotation = 1.5676985
scale = Vector2(1.0000004, 1.0000004)
shape = SubResource("RectangleShape2D_hbk6c")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(-6.9999847, 7)
rotation = 1.5676985
scale = Vector2(0.99999994, 0.99999994)
shape = SubResource("CapsuleShape2D_7kcg0")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(11.967455, 1.5996099, 2.0465, 1)
texture_filter = 1
offset_left = -46.0
offset_top = -73.0
offset_right = 85.0
offset_bottom = -33.0
theme_override_colors/font_color = Color(0, 0.47292545, 0.011355812, 1)
theme_override_colors/font_outline_color = Color(0, 1, 0.06666667, 1)
theme_override_fonts/font = ExtResource("3_0jfbd")
theme_override_font_sizes/font_size = 30
step = 20.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
